--- a/build.gradle
+++ b/build.gradle
@@ -5,13 +5,11 @@ buildscript {
         lifecycle_ktx_version ='2.4.0'
         moshi_version = '1.12.0'
         retrofit_version = '2.9.0'
-        glide_version = '4.12.0'
         hilt_version = '2.40'
         mockito_version_kotlin = '4.0.0'
         coroutines_version = '1.6.0'
-        room_version = '2.4.2'
-        gson_version = '2.9.0'
         logging_interceptor_version = "4.2.2"
+        threetenbp_version = "1.6.1"
     }
     repositories {
         google()
